# CareerCopilotAgent

./: .gitignore  ENHANCED_STATUS.md  HACKATHON_NOTES.md  README.md  README_HACKATHON.md  app.py  cli.py  config.py  orchestrator.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_demo.bat  run_demo.ps1  test_features.bat  test_interview_prep.py  test_job_tracker.py  test_orchestrator.py
.portia/cache/agent_memory/prun-29ce5b5a-91f0-49b0-bdcd-23c7cb951492/: $interview_questions.json
.portia/cache/agent_memory/prun-2c89e298-3675-44ec-9c04-7242c0e01d87/: $emails.json
.portia/cache/agent_memory/prun-2df70cbf-f2d1-4d16-a547-1d57b6962db0/: $emails.json
.portia/cache/agent_memory/prun-3e4df492-0049-468c-9aac-5bc240a8cb4b/: $interview_qa.json
.portia/cache/agent_memory/prun-4237dd80-8e89-400b-96a8-a787d77f1691/: $interview_qa.json
.portia/cache/agent_memory/prun-4f26fd26-b947-4297-9df2-4c85faea26a9/: $interview_qa.json
.portia/cache/agent_memory/prun-51d3f7ba-bb8c-45a8-b7fe-ab78dc3a1d9f/: $emails.json
.portia/cache/agent_memory/prun-5e60d010-ec12-48e8-871b-4b6ad16e4a5b/: $interview_questions.json
.portia/cache/agent_memory/prun-6282c776-b546-4423-8087-8325c953764b/: $interview_questions.json
.portia/cache/agent_memory/prun-826757f1-1959-4d35-bac8-7a78805db085/: $emails.json
.portia/cache/agent_memory/prun-93e733f4-177f-4027-8f55-ac67ef965084/: $emails.json
app/: __init__.py  orchestrator.py
scripts/: sheets_smoke.py
tools/: __init__.py  ats_scoring.py  google_sheets_direct.py  jd_parser.py  resume_parser.py
(+12 files in other folders)
