[project]
name = "careercopilotagent"
version = "0.1.0"
description = ""
authors = [
    { name = "sumeet156", email = "sumeetchaudhary156@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "portia-sdk-python[google]==0.7.0",
    "python-dotenv==1.1.1",
    "pandas==2.3.2",
    # add all other dependencies here
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
